<resources>
    <string name="app_name" translatable="false">Y Messenger</string>
    <string name="next">Next</string>
    <string name="close">Close</string>
    <string name="sign_in">Sign in</string>
    <string name="choose_sign_in_method">Choose sign in method</string>
    <string name="using_phone_number">Using phone number</string>
    <string name="using_email">Using email</string>
    <string name="using_qr_code">Using QR-code</string>
    <string name="server">Server:</string>
    <string name="automatically">Automatically</string>
    <string name="change">Change</string>
    <string name="input_phone_number">Input phone number</string>
    <string name="receive_sms_code">Receive SMS with code</string>
    <string name="we_sent_you_code">We sent you SMS with confirmation code on phone</string>
    <string name="we_sent_you_email_with_code">We sent you confirmation code to email</string>
    <string name="done">Done</string>
    <string name="input_confirmation_code">Input confirmation code</string>
    <string name="code_is_not_valid">Code is not valid</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="email_is_incorrect">Email is incorrect</string>
    <string name="password_cant_be_empty">Password can\'t be empty</string>
    <string name="input_code_from_sms">Input code from sms</string>
    <string name="wrong_phone_format">Wrong phone format</string>
    <string name="scan_code_to_sign_in">Scan QR-code to sign in</string>
    <string name="search">Search</string>
    <string name="automatic_mode">Automatic mode</string>
    <string name="choose_server">Choose server</string>
    <string name="current_server">Current server:</string>
    <string name="county">Country:</string>
    <string name="encryption_level">Encryption level:</string>
    <string name="ID" translatable="false">ID:</string>
    <string name="el_base">Base</string>
    <string name="changing_server">Changing server</string>
    <string name="do_you_really_want_use_server_name">Do you really want to use server \"%s\"?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="short_id" translatable="false">(%s)</string>
    <string name="messages">Messages</string>
    <string name="hint_message">Message…</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="phone">Phone</string>
    <string name="user_group">User group</string>
    <string name="about">About</string>
    <string name="send_message">Send message</string>
    <string name="start_secret_chat">Start secret chat</string>
    <string name="information">Information</string>
    <string name="settings">Settings</string>
    <string name="create_group_chat">Create group chat</string>
    <string name="tasks">Tasks</string>
    <string name="files">Files</string>
    <string name="contacts">Contacts</string>
    <string name="contact_groups">Contact groups</string>
    <string name="send_invite">Send invite</string>
    <string name="security">Security</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="notifications">Notifications</string>
    <string name="user_interface">Interface</string>
    <string name="data">Data</string>
    <string name="support">Support</string>
    <string name="group_name">Group name</string>
    <string name="invite_only">Invite only</string>
    <string name="create_channel">Create channel</string>
    <string name="auto_delete_messages">Automatically delete messages</string>
    <string name="do_not_remove">Don\'t remove</string>
    <string name="one_hour">1 hour</string>
    <string name="three_hours">3 hours</string>
    <string name="twelve_hours">12 hours</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="add_members">Add members</string>
    <string name="new_group">New group</string>
    <string name="reply">Reply</string>
    <string name="forward">Forward</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="message_text_was_copied">Message text was copied</string>
    <string name="you">You</string>
    <string name="message_with_author_name_placeholder" translatable="false">%s: %s</string>
    <string name="photo_from_gallery">Photo from gallery</string>
    <string name="documents">Documents</string>
    <string name="add_files">Add files</string>
    <string name="selected_placeholder">Selected: %d</string>
    <string name="folder">Folder</string>
    <string name="photo">Photo</string>
    <string name="add_contact">Add contact</string>
    <string name="images">Images</string>
    <string name="video">Video</string>
    <string name="users_online_placeholder">%d online</string>
    <string name="members_count_placeholder">%d members</string>
    <string name="from_placeholder">Forwarded message\nfrom: %s</string>
    <string name="all">All</string>
    <string name="field_can_not_be_empty">Field can\'t be empty</string>
    <string name="no_messages_yet">No messages yet</string>
    <string name="contact_group_name">Contact group name</string>
    <string name="new_contact_group">New contact group</string>
    <string name="edit_contact_group">Edit contact group</string>
    <string name="delete_contact_group">Delete contact group</string>
    <string name="do_you_want_delete_this_contact_group">Do you really want delete this contact group?</string>
    <string name="attention">Attention</string>
    <string name="messages_count">Messages count: %d</string>
    <string name="connection">Connection…</string>
    <string name="users">Users</string>
    <string name="add_to_contacts">Add to contacts</string>
    <string name="remove_from_contacts">Remove from contacts</string>
    <string name="last_online">Last online %s</string>
    <string name="creating_of_chat">Creating of chat…</string>
    <string name="failed_to_create_chat">Failed to create chat</string>
    <string name="do_you_want_delete_this_chat">Do you really want to delete this chat?</string>
    <string name="leave">Leave</string>
    <string name="do_you_really_want_leave_chat">Do you really want to leave chat?</string>
    <string name="loading">Loading…</string>
    <string name="failed_to_leave_chat">Failed to leave chat</string>
    <string name="do_you_want_remove_user_from_chat">Do you really want remove user from chat?</string>
    <string name="failed_to_perform_operation">Failed to perform operation</string>
    <string name="phone_not_found">Phone not found</string>
    <string name="authorization_error">Authorization error</string>
    <string name="no_info">No info</string>
    <string name="input_email">Input your email</string>
    <string name="send_email_with_code">Send email with code</string>
    <string name="wrong_email_format">Wrong email format</string>
    <string name="email_not_found">Email not found</string>
    <string name="code_is_too_short">Code is too short</string>
    <string name="could_not_get_phone_number">Couldn\'t get phone number</string>
    <string name="last_online_no_information">Last online: no information</string>
    <string name="do_you_really_want_to_delete_messages_bellow">Do you really want to delete messages bellow?</string>
    <string name="edit_chat">Edit chat</string>
    <string name="group_about">Group about</string>
    <string name="group_photo">Group photo</string>
    <string name="chat_editing">Chat editing</string>
    <string name="editing_of_chat">Editing of chat…</string>
    <string name="unknown_error">Unknown error</string>
    <string name="ec_permission_denied">Permission denied</string>
    <string name="about_group">About</string>
    <string name="tag">Tag</string>
    <string name="admin">Admin</string>
    <string name="creator">Creator</string>
    <string name="moderator">Moderator</string>
    <string name="do_you_want_delete_this_message">Do you really want to delete this message?</string>
    <string name="clear_messages_from_db">Clear messages (locally)</string>
    <string name="do_you_want_delete_messages">Do you really want to delete all messages (locally)?</string>
    <string name="select_chat">Select chat</string>
    <string name="attachment">Attachment</string>
    <string name="file_size_is_too_large_error">File size is too large</string>
    <string name="file_upload_error">File upload error</string>
    <string name="download_file_error">Download file error</string>
    <string name="file_downloaded">File downloaded</string>
    <string name="file_saved_at">File saved at %s</string>
    <string name="open_file">Open file</string>
    <string name="failed_to_open_file">Failed to open file</string>
    <string name="file_does_not_exist">File doesn\'t exist</string>
    <string name="loaded">Loaded</string>
    <string name="protected_chat">Protected chat</string>
    <string name="specify_what_information_is_available_to_other_users">Specify what information about you is available to other users</string>
    <string name="name_and_tag">Name, tag</string>
    <string name="photo_and_about">Photo, about</string>
    <string name="application_login_settings">Application login settings</string>
    <string name="pin">PIN</string>
    <string name="set_pin_to_enter_the_application">Set pin code to enter the application</string>
    <string name="leave_channel">Leave channel</string>
    <string name="protected_channel">Protected channel</string>
    <string name="promote_to_admin">Promote to admin</string>
    <string name="remove_from_chat">Remove from chat</string>
    <string name="promote_to_moderator">Promote to moderator</string>
    <string name="demote_to_moderator">Demote to moderator</string>
    <string name="dismiss_moderator_rights">Dismiss moderator rights</string>
    <string name="developer_options">Developer options</string>
    <string name="show_encryption_key">Show encryption key</string>
    <string name="gallery">Gallery</string>
    <string name="contact_sync_settings">Contact synchronization settings</string>
    <string name="sync_contacts">Sync contacts</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="sessions">Sessions</string>
    <string name="list_of_authorized_devices">List of authorized devices</string>
    <string name="mute_notifications">Mute notifications</string>
    <string name="unmute_notifications">Unmute notifications</string>
    <string name="encryption_settings">Encryption settings</string>
    <string name="encrypted_connection">Encrypted connection</string>
    <string name="server_label">Server</string>
    <string name="other_users_will_be_able_to_find_you_by_name_and_tag">Other users will be able to find you by name and tag</string>
    <string name="other_users_will_see_when_you_are_online">Other users will see when you are online</string>
    <string name="other_users_will_be_able_to_find_you_by_phone">Other users will be able to find you by phone</string>
    <string name="other_users_will_be_able_to_find_you_by_email">Other users will be able to find you by email</string>
    <string name="other_users_will_see_your_photo_and_about_info">Other users will see your photo and about info</string>
    <string name="change_passphrase">Change passphrase</string>
    <string name="save_passphrase_on_device">Save passphrase on device</string>
    <string name="save_passphrase_description">If this option is disabled, app will require you to input passphrase every time when you open the application</string>
</resources>