<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of Y messenger.
  ~
  ~ Y messenger is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Y messenger is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Y messenger.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mi_add_to_favorites"
        android:icon="@drawable/ic_star_black"
        android:title="@string/add_to_favorites" />

    <item
        android:id="@+id/mi_remove_from_favorites"
        android:icon="@drawable/ic_star_border"
        android:title="@string/remove_from_favorites" />

    <item
        android:id="@+id/mi_mute"
        android:icon="@drawable/ic_volume_off"
        android:title="@string/mute_notifications" />

    <item
        android:id="@+id/mi_unmute"
        android:icon="@drawable/ic_volume_up"
        android:title="@string/unmute_notifications" />

    <item
        android:id="@+id/mi_clear_messages_locally"
        android:icon="@drawable/ic_delete_sweep"
        android:title="@string/clear_messages_from_db" />

    <item
        android:id="@+id/mi_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete" />
</menu>