<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of Y messenger.
  ~
  ~ Y messenger is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Y messenger is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Y messenger.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mi_chat_security"
        android:checkable="true"
        android:icon="@drawable/ic_lock"
        android:title="@string/protected_channel"
        android:visible="false" />

    <item
        android:id="@+id/mi_gallery"
        android:title="@string/gallery" />

    <item
        android:id="@+id/mi_clear_messages_locally"
        android:title="@string/clear_messages_from_db" />

    <item
        android:id="@+id/mi_leave"
        android:title="@string/leave_channel"
        android:visible="false" />
</menu>